syntax = "proto3";

option java_package = "io.morethan.tweaky.conductor.registration.proto";
option java_outer_classname = "NodeRegistryProto";
option java_multiple_files = false;

service NodeRegistry {
  rpc RegisterNode (NodeRegistrationRequest) returns (NodeRegistrationReply);
  rpc NodeCount (NodeCountRequest) returns (NodeCountReply);
  rpc AwaitNodes (AwaitNodesRequest) returns (AwaitNodesReply);
}

message NodeRegistrationRequest {
    string host = 1;
    int32 port = 2;
    string token =3;
}
message NodeRegistrationReply {}

message NodeCountRequest {}
message NodeCountReply {
    int32 count = 1;
}

message AwaitNodesRequest {
    int32 count = 1;
}
message AwaitNodesReply {}
