syntax = "proto3";

option java_package = "io.morethan.tweaky.grpc.server.proto";
option java_outer_classname = "ServiceRegistryProto";
option java_multiple_files = false;

service ServiceRegistry {
  rpc ServerServices (ServicesRequest) returns (ServicesReply);
}

message ServicesRequest {}
message ServicesReply {
    repeated string name = 1;
}
